Fixed img alt, attempted fix docs contrast.

--- a/_sass/color_schemes/onnxruntime.scss
+++ b/_sass/color_schemes/onnxruntime.scss
@@ -2,12 +2,83 @@ $link-color: #226aca;
 $btn-primary-color: #226aca;
 
 // Code is too light in default theme //
-.highlight .n {
-	color: #555 !important;
-}
-.highlight .nn {
-	color: #555 !important;
-}
-.highlight .c1 {
-	color: #188616 !important;
-}
+// .highlight .n {
+// 	color: #555 !important;
+// }
+// .highlight .nn {
+// 	color: #555 !important;
+// }
+// .highlight .c1 {
+// 	color: #188616 !important;
+// }
+
+.highlight .hll { background-color: #49483e; }
+.highlight { background: #272822; color: #f8f8f2; }
+.highlight .c { color: #949076; }
+.highlight .err { background-color: #1e0010; color: #eb0083; }
+.highlight .k { color: #66d9ef; }
+.highlight .l { color: #ae81ff; }
+.highlight .n { color: #f8f8f2; }
+.highlight .o { color: #f94e8a; }
+.highlight .p { color: #f8f8f2; }
+.highlight .ch { color: #949076; }
+.highlight .cm { color: #949076; }
+.highlight .cp { color: #949076; }
+.highlight .cpf { color: #949076; }
+.highlight .c1 { color: #949076; }
+.highlight .cs { color: #949076; }
+.highlight .gd { color: #f94e8a; }
+.highlight .ge { font-style: italic; }
+.highlight .gi { color: #a6e22e; }
+.highlight .gs { font-weight: bold; }
+.highlight .gu { color: #949076; }
+.highlight .kc { color: #66d9ef; }
+.highlight .kd { color: #66d9ef; }
+.highlight .kn { color: #f94e8a; }
+.highlight .kp { color: #66d9ef; }
+.highlight .kr { color: #66d9ef; }
+.highlight .kt { color: #66d9ef; }
+.highlight .ld { color: #e6db74; }
+.highlight .m { color: #ae81ff; }
+.highlight .s { color: #e6db74; }
+.highlight .na { color: #a6e22e; }
+.highlight .nb { color: #f8f8f2; }
+.highlight .nc { color: #a6e22e; }
+.highlight .no { color: #66d9ef; }
+.highlight .nd { color: #a6e22e; }
+.highlight .ni { color: #f8f8f2; }
+.highlight .ne { color: #a6e22e; }
+.highlight .nf { color: #a6e22e; }
+.highlight .nl { color: #f8f8f2; }
+.highlight .nn { color: #f8f8f2; }
+.highlight .nx { color: #a6e22e; }
+.highlight .py { color: #f8f8f2; }
+.highlight .nt { color: #f94e8a; }
+.highlight .nv { color: #f8f8f2; }
+.highlight .ow { color: #f94e8a; }
+.highlight .w { color: #f8f8f2; }
+.highlight .mb { color: #ae81ff; }
+.highlight .mf { color: #ae81ff; }
+.highlight .mh { color: #ae81ff; }
+.highlight .mi { color: #ae81ff; }
+.highlight .mo { color: #ae81ff; }
+.highlight .sa { color: #e6db74; }
+.highlight .sb { color: #e6db74; }
+.highlight .sc { color: #e6db74; }
+.highlight .dl { color: #e6db74; }
+.highlight .sd { color: #e6db74; }
+.highlight .s2 { color: #e6db74; }
+.highlight .se { color: #ae81ff; }
+.highlight .sh { color: #e6db74; }
+.highlight .si { color: #e6db74; }
+.highlight .sx { color: #e6db74; }
+.highlight .sr { color: #e6db74; }
+.highlight .s1 { color: #e6db74; }
+.highlight .ss { color: #e6db74; }
+.highlight .bp { color: #f8f8f2; }
+.highlight .fm { color: #a6e22e; }
+.highlight .vc { color: #f8f8f2; }
+.highlight .vg { color: #f8f8f2; }
+.highlight .vi { color: #f8f8f2; }
+.highlight .vm { color: #f8f8f2; }
+.highlight .il { color: #ae81ff; }
